# clap_serde_derive2

./: Cargo.toml
clap-serde-proc/: Cargo.toml
clap-serde-proc/src/: lib.rs
src/: lib.rs
tests/: unit_struct.rs
