[workspace]
members = [
  "clap-serde-proc",
]

[package]
name = "clap-serde-derive2"
description = "Merge results from clap and serde into struct with derive"
version = "0.1.0"
edition = "2021"
authors = ["Davide Peressoni"]
repository = "https://gitlab.com/DPDmancul/clap-serde-derive"
license = "AGPL-3.0-or-later"
keywords = ["cli", "argument", "config", "parser"]
categories = ["command-line-interface", "config", "encoding"]
exclude = [".gitlab-ci.yml", "check_diff_ver.sh", "clap-serde-proc", "assets"]

[dependencies]
clap-serde-proc2 = { path = "./clap-serde-proc", version = "0.1" }
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.34"
